--- a/xiaohongshu-demo/css1/components/container.css
+++ b/xiaohongshu-demo/css1/components/container.css
@@ -1,6 +1,4 @@
-.container {
-  padding: 0 160px;
-}
+.container {}
 
 /*Doing card 1*/
 .card-1 {
@@ -9,6 +7,13 @@
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   padding: 30px;
+  transition: 0.3s;
+}
+
+.card-1:hover {
+  background-color: #eef0f2;
+  box-shadow: 7px 7px 8px grey;
+
 }
 
 .card-1 h2 {
@@ -45,6 +50,12 @@
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   padding: 30px;
+  transition: 0.3s;
+}
+
+.card-2:hover {
+  background-color: #FFFBC2;
+  box-shadow: 7px 7px 8px grey;
 }
 
 .card-2 h2 {
@@ -80,8 +91,14 @@
   border-radius: 44px;
   overflow: hidden;
   background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 15px rgba(0,0,0,0.2);
   padding: 30px;
+  transition: 0.3s;
+}
+
+.card-3:hover {
+  background-color: #466362;
+  box-shadow: 7px 7px 8px grey;
 }
 
 .card-3 h2 {
@@ -110,6 +127,137 @@
   align-items: center
 }
 
+
+/*Doing card 4*/
+
+.card-4 {
+  border-radius: 44px;
+  overflow: hidden;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  padding: 30px;
+  transition: 0.3s;
+}
+
+
+.card-4:hover {
+  background-color: #9A5409;
+  box-shadow: 7px 7px 8px grey;
+}
+
+.card-4 h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+  font-family: inherit;
+}
+
+.card-4 img {
+  width: 100%;
+}
+
+.card-4 p {
+  font-size: 12px;
+  opacity: .7;
+  margin: 0;
+}
+
+.card-4 .card-4-info {
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: relative;
+  align-items: center
+}
+
+
+/*Doing card 5*/
+
+.card-5 {
+  border-radius: 44px;
+  overflow: hidden;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  padding: 30px;
+  transition: 0.3s;
+}
+
+.card-5:hover {
+  background-color: #edffd9;
+  box-shadow: 7px 7px 8px grey;
+}
+
+.card-5 h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+  font-family: inherit;
+}
+
+.card-5 img {
+  width: 100%;
+}
+
+.card-5 p {
+  font-size: 12px;
+  opacity: .7;
+  margin: 0;
+}
+
+.card-5 .card-5-info {
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: relative;
+  align-items: center
+}
+
+
+/*Doing card 6*/
+
+.card-6 {
+  border-radius: 44px;
+  overflow: hidden;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  padding: 30px;
+  transition: 0.3s;
+}
+
+.card-6:hover {
+  background-color: #D9EFBD;
+  box-shadow: 7px 7px 8px grey;
+}
+
+.card-6 h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+  font-family: inherit;
+}
+
+.card-6 img {
+  width: 100%;
+}
+
+.card-6 p {
+  font-size: 12px;
+  opacity: .7;
+  margin: 0;
+}
+
+.card-6 .card-6-info {
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: relative;
+  align-items: center
+}
+
+
 /* Box-sizing reset: //w3bits.com/?p=3225 */
 html {
   box-sizing: border-box;
@@ -134,6 +282,7 @@ html {
   background: #fff;
   padding: 1em;
   margin: 0 0 1.5em;
+  display: inline-block;
 }
 
 
@@ -153,11 +302,19 @@ html {
   .container {
     width: 500px;
   }
+
+  .masonry {
+    column-count: 2;
+  }
 }
 @media (max-width: 540px) {
   /* For a screen < 540px, this CSS will be read */
   .container {
     width: 300px;
+  }
+
+  .masonry {
+    column-count: 1;
   }
 }
 
