--- a/Components/01-Button-sprint/buttons/index.html
+++ b/Components/01-Button-sprint/buttons/index.html
@@ -11,6 +11,8 @@
     <div class="text-center">
       <h1>Button design sprint</h1>
       <p>Code the two first ones + invent yours</p>
+    </div>
+    <div class="btns">
       <a href="#" class="btn-medium">Write a story</a>
       <a href="#" class="btn-treehouse">Start now</a>
       <a href="#" class="btn-yours">Ana's Button</a>
