--- a/Components/02-Card-sprint/cards/css/components/avatar.css
+++ b/Components/02-Card-sprint/cards/css/components/avatar.css
@@ -9,23 +9,19 @@
 }
 */
 
-.card-trip-user {
-    width: 50px;
-  height: 50px;
-  position: relative;
-  overflow: hidden;
-  border-radius:50%;
-  object-fit: cover;
-  border: black 1px solid;
+.car-trip-info .card-trip-user {
+    position: absolute;
+    right: 16px;
+    top: -20px;
+    width: 40px;
+
 }
 
 
 .avatar-bordered {
-    width: 50px;
-  height: 50px;
-  position: relative;
-  overflow: hidden;
-  border-radius:50%;
-  object-fit: cover;
-  border: black 1px solid;
+    width: 40px;
+    border-radius: 50%;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+    border: white 1px solid;
+    top: -20px;
 }
