--- a/Components/02-Card-sprint/cards/css/components/cards.css
+++ b/Components/02-Card-sprint/cards/css/components/cards.css
@@ -38,14 +38,14 @@ display: flex;
 }
 
 .card-product h2 {
-font-size: 16px;
-  font-weight: bold;
-  margin: 0;
-  font-family: inherit;
+ font-size: 16px;
+ font-weight: bold;
+ margin: 0;
+ font-family: inherit;
 }
 
-car.product p{
-   font-size: 12px;
+.car-product p {
+  font-size: 12px;
   opacity: .7;
   margin: 0;
 }
@@ -55,21 +55,27 @@ car.product p{
 }
 
 .card-trip {
-background-size: cover;
-background-position: center;
-align-items: center;
-box-shadow: 0 0 15px rgba(0,0,0,0.2);
-padding: 16px;
-position: relative;
-align-items: center
-overflow: hidden;
+  overflow: hidden;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
-.card-trip img {
+.card-trip > img {
   width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
 
-/*.card-1 h2 {
+.card-trip .card-trip-info {
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: relative;
+
+}
+
+.card-trip h2 {
   font-size: 16px;
   font-weight: bold;
   margin: 0;
@@ -78,17 +84,11 @@ overflow: hidden;
 
 
 
-.card-1 p {
+.card-trip p {
   font-size: 12px;
   opacity: .7;
   margin: 0;
 }
 
-.card-1 .card-1-info {
-  padding: 16px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  position: relative;
-  align-items: center
-}*/
+
+
