--- a/Components/02-Card-sprint/cards/index.html
+++ b/Components/02-Card-sprint/cards/index.html
@@ -26,17 +26,17 @@
 
     <br>
 
-    <div class="card-trip">
+    <div class="container card-trip">
     <img src="https://images.unsplash.com/photo-1522787345986-d5c7885a889e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80">
-          <div class="card-trip-info">
-            <div>
-              <h2>Title here</h2>
-              <p>Short description here!</p>
-            </div>
-            <h2 class="card-trip-pricing">£99.99</h2>
-            <img src='https://kitt.lewagon.com/placeholder/users/krokrob' class="card-trip-user avatar-bordered"/>
+        <div class="card-trip-info">
+          <div>
+          <h2>Title here</h2>
+          <p>Short description here!</p>
           </div>
-    </div>
+          <h2 class="card-trip-pricing">£99.99</h2>
+          <img src='https://kitt.lewagon.com/placeholder/users/krokrob' class="card-trip-user avatar-bordered"/>
+        </div>
+   </div>
   </div>
   </body>
 </html>
