--- a/miniprogram-3/pages/post/post.wxml
+++ b/miniprogram-3/pages/post/post.wxml
@@ -1,2 +1,15 @@
 <!--pages/post/post.wxml-->
-<text>pages/post/post.wxml</text>
+<view class="banner" style="padding:20px 0px; height: 100px; background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://www.marketingtochina.com/wp-content/uploads/2016/12/toutiao.png);">
+    <!-- <view class="h1">F*** my code</view> -->
+    <view class="p">{{tagline}}</view>
+</view>
+
+
+<view class="card-product">
+  <image src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg"/>
+  <view class="card-product-infos">
+    <view class="h2">Story/Post name</view>
+    <view class="p">Comment or description </view>
+  </view>
+</view>
+
