--- a/miniprogram-3/pages/post/post.wxss
+++ b/miniprogram-3/pages/post/post.wxss
@@ -1,1 +1,35 @@
 /* pages/post/post.wxss */
+
+.card-product {
+  overflow: hidden;
+  /* height: 120px; */
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  /* display: flex; */
+  align-items: center;
+  margin: 1em;
+}
+
+.image {
+  height: 100%;
+  width: 10px;
+  object-fit: contain;
+  }
+
+.h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.p {
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
+
+.card-product .card-product-infos {
+  padding: 16px;
+}
