--- a/miniprogram-3/pages/stories/stories.wxss
+++ b/miniprogram-3/pages/stories/stories.wxss
@@ -1,32 +1,37 @@
 /* pages/stories/stories.wxss */
 
 page {
-  background-color: black;
+  background-color: rgb(233, 72, 72);
 }
 
 .card-product {
   overflow: hidden;
-  height: 120px;
-  background: white;
+  height: 100px;
+  background: rgb(247, 245, 245);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+  border-radius: 25px;
+  margin: 20px 15px;
 }
 
 .card-product .h2 {
   font-size: 16px;
   font-weight: bold;
   margin: 0;
+  font-family: 'Arial Narrow', Arial, sans-serif;
 }
 
 .card-product .p {
   font-size: 12px;
   line-height: 1.4;
   opacity: .7;
-  margin-bottom: 0;
+  margin-bottom: 0 auto;
   margin-top: 8px;
+  padding: 6px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .card-product .card-product-infos {
-  padding: 16px;
+  padding: 20px;
 }
